rudimentary user authentication working.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,6 +2,9 @@
   <%= label_tag "Username" %>
   <%= text_field_tag "session[username]" %>
   <br>
+  <%= label_tag "Email" %>
+  <%= email_field_tag "session[email]" %>
+  <br>
   <%= label_tag "Password" %>
   <%= password_field_tag "session[password]" %>
   <br>
