--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
 <h2>Sign Up</h2>
 <%= render partial: "layouts/errors" %>
-<%= render partial: "users/form", locals: { user: @user } %>
+<%= render partial: "users/form" %>
