integrate bootstrap in assets and gemfile. basic layout added. partials added to reduce view clutter

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "layouts/nav", locals: { user: @user } %>
 <h2>Sign Up</h2>
 <%= render partial: "layouts/errors" %>
 <%= render partial: "users/form" %>
