--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag('/sessions', method: 'POST') do %>
+<%= form_tag('/users', method: 'POST') do %>
   <%= label_tag "Username" %>
   <%= text_field_tag "session[username]" %>
   <br>
