--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
 <%= render partial: "layouts/nav", locals: { user: @user } %>
 <h2>Sign Up</h2>
-<%= render partial: "layouts/errors" %>
+<%= render partial: "layouts/error" %>
 <%= render partial: "users/form" %>
