--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'layouts/error' %>
+<%= render partial: 'layouts/flash_error' %>
 <%= render partial: "layouts/nav", locals: { user: @user } %>
 <% if !@user.nil? %>
   <div class="container-fluid">
