--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
       <li class="nav-item active">
         <%= link_to 'Home', root_path, class: 'nav-link' %>
       </li>
-      <% if !user %>
+      <% if !logged_in? %>
         <li class="nav-item active">
           <%= link_to 'Log In', login_path, class: 'nav-link' %>
         </li>
@@ -16,13 +16,13 @@
           <%= link_to 'Sign Up', signup_path, class: 'nav-link' %>
         </li>
       <% end %>
-      <% if user %>
+      <% if logged_in? %>
         <li class="nav-item active">
           <a class="nav-link" href="#">Teams</a>
         </li>
       <% end %>
     </ul>
-    <% if user %>
+    <% if logged_in? %>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <%= link_to 'Profile', root_path, class: 'nav-link' %>
