--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,7 +18,7 @@
       <% end %>
       <% if logged_in? %>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Teams</a>
+          <%= link_to 'Teams', teams_path, class: 'nav-link' %>
         </li>
       <% end %>
     </ul>
