--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -5,7 +5,7 @@
 <%= link_to 'Create a New Team', new_team_path %>
 
 <% @teams.each do |t| %>
-  <h4><%= t.name %></h4>
+  <h4><%= link_to t.name, team_path(t) %></h4>
   <img src="<%= t.avatar_url %>" alt="Team Logo" class="img-fluid" style="max-width: 8%; height: auto;">
   <p><%= t.avatar_url %></p>
   <p><%= t.repo_url %></p>
