--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,6 +10,7 @@
   <br>
   <%= label_tag "Confirm Password" %>
   <%= password_field_tag "session[password_confirmation]" %>
+  <%= hidden_field_tag "session[avatar_url]", 'https://i.imgur.com/WNQg4gn.png' %>
   <br>
   <%= submit_tag 'Register' %>
 <% end %>
