comment user and date timestamp added to team show page. comment helper added to format date timestamp.

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -12,4 +12,6 @@
 <h4>Comments:</h4>
 <% @comments.each do |c| %>
   <%= c.content %>
+  <br>
+  <%= "Posted by: #{username(c.user_id)} on #{formatted_datetime(c.created_at)}"%>
 <% end %>
