user edit working. authentication added prior to editing a profile added.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,16 @@
 <%= form_tag('/users', method: 'POST') do %>
   <%= label_tag "Username" %>
-  <%= text_field_tag "session[username]" %>
+  <%= text_field_tag "user[username]" %>
   <br>
   <%= label_tag "Email" %>
-  <%= email_field_tag "session[email]" %>
+  <%= email_field_tag "user[email]" %>
   <br>
   <%= label_tag "Password" %>
-  <%= password_field_tag "session[password]" %>
+  <%= password_field_tag "user[password]" %>
   <br>
   <%= label_tag "Confirm Password" %>
-  <%= password_field_tag "session[password_confirmation]" %>
-  <%= hidden_field_tag "session[avatar_url]", 'https://i.imgur.com/WNQg4gn.png' %>
+  <%= password_field_tag "user[password_confirmation]" %>
+  <%= hidden_field_tag "user[avatar_url]", 'https://i.imgur.com/WNQg4gn.png' %>
   <br>
   <%= submit_tag 'Register' %>
 <% end %>
