--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,31 @@
+<%= render partial: "layouts/nav", locals: { user: @user } %>
+<h2>Edit your profile</h2>
+<%= render partial: "layouts/flash_error" %>
+<%= render partial: "layouts/object_errors", locals: { object: @user } %>
 <%= form_for(@user) do |f| %>
+  <%= f.label :username %>
   <%= f.text_field :username %>
+  <br>
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+  <br>
+  <%= f.label :password %>
+  <%= f.text_field :password %>
+  <br>
+  <%= f.label :password_confirmation, 'Confirm Password' %>
+  <%= f.text_field :password_confirmation %>
+  <br>
+  <%= f.label :real_name, 'Name' %>
+  <%= f.text_field :real_name %>
+  <br>
+  <%= f.label :company %>
+  <%= f.text_field :company %>
+  <br>
+  <%= f.label :bio %>
+  <%= f.text_area :bio %>
+  <br>
+  <%= f.label :avatar_url %>
+  <%= f.text_field :avatar_url %>
+  <br>
   <%= f.submit %>
 <% end %>
