--- a/app/views/user_technologies/new.html.erb
+++ b/app/views/user_technologies/new.html.erb
@@ -1,3 +1,8 @@
+<%= render partial: "layouts/nav", locals: { user: @user } %>
+<h2>Add a technology</h2>
+<%= render partial: "layouts/flash_error" %>
+<%= render partial: "layouts/object_errors", locals: { object: @user } %>
+
 <%= form_for(@technology) do |f| %>
   <%= f.label :technology %>
   <%= f.collection_select :technology, Technology.all, :id, :name, include_blank: 'Select an existing technology' %>
