--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+$primary: #5f27cd;
+
 @import 'bootstrap';
+
+.jumbotron {
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 5px 10px #888888;
+  border-color: #576574;
+  background-color: #fff;
+}
+
+.navbar {
+  background-color: #576574;
+}
