--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -7,6 +7,15 @@
   <br>
   <%= f.label :repo_url, 'Repository URL' %>
   <%= f.text_field :repo_url %>
+  <br>
+  <%= f.label :description %>
+  <%= f.text_field :description %>
+  <br>
+  <%= f.label :goals %>
+  <%= f.text_field :goals %>
+  <br>
+  <%= f.label :communication_method, 'Slack' %>
+  <%= f.text_field :communication_method %>
   <%= f.hidden_field :creator_id, value: user.id %>
   <br>
   <%= f.submit %>
