--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "layouts/nav", locals: { user: @user } %>
-<%= render partial: "layouts/flash_error" %>
+<%= render partial: "layouts/flash_message" %>
 <%= render partial: "layouts/object_errors", locals: { object: @user } %>
 <div class="container mx-auto">
 <div class="text-center">
