--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
-<%= render partial: 'layouts/flash_error' %>
 <%= render partial: "layouts/nav", locals: { user: @user } %>
+<%= render partial: 'layouts/flash_message' %>
 <br>
 <% if !@user %>
   Index page
