--- a/app/views/layouts/_object_errors.html.erb
+++ b/app/views/layouts/_object_errors.html.erb
@@ -1,10 +1,9 @@
 <% if object.errors.any? %>
   <div id="error_explanation">
-    <p>Oops...</p>
-    <ul>
       <% object.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <div class="alert alert-warning" role="alert">
+          <%= message %>
+        </div>
       <% end %>
-    </ul>
   </div>
 <% end %>
