--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: "layouts/nav", locals: { user: @user } %>
 <h2>Welcome, <%= @user.username %></h2>
-<%= render partial: "layouts/flash_error" %>
+<%= render partial: "layouts/flash_message" %>
 <%= render partial: "layouts/object_errors", locals: { object: @user } %>
 
 <img src="<%= @user.avatar_url %>" alt="User Logo" class="img-fluid" style="max-width: 8%; height: auto;">
