--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,5 +12,7 @@
   <%= password_field_tag "user[password_confirmation]" %>
   <%= hidden_field_tag "user[avatar_url]", 'https://i.imgur.com/WNQg4gn.png' %>
   <br>
+  <%= recaptcha_tags %>
+  <br>
   <%= submit_tag 'Register' %>
 <% end %>
