--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,85 +2,45 @@
 <h2>Welcome, <%= @user.username %></h2>
 <%= render partial: "layouts/flash_message" %>
 <%= render partial: "layouts/object_errors", locals: { object: @user } %>
-
-
-
-
-
-
-                <div class="modal-body">
-                    <center>
-                    <img src="<%= @user.avatar_url %>" name="aboutme" width="140" height="140" border="0" class="img-circle"></a>
-                    <h3 class="media-heading"><%= @user.username %><small> <%= @user.real_name if @user.real_name %></small></h3>
-                    <h6>
-                      <% @user.user_technologies.each do |t| %>
-                          <%= "#{grab_technology_name(t.technology_id)}" %> <span class="badge badge-primary"><%= t.skill_level %></span>
-                      <% end %>
-                    </h6>
-                    </center>
-                    <hr>
-                    <center>
-                    <div class="container">
-                    <p class="text-left"><strong>Bio: </strong><br>
-                        <%= @user.bio if !@user.bio.nil? %></p>
-                        </div>
-                    <br>
-                    </center>
-                </div>
+<div class="modal-body">
+  <center>
+    <img src="<%= @user.avatar_url %>" name="aboutme" width="140" height="140" border="0" class="img-circle"></a>
+  <h3 class="media-heading"><%= @user.username %><small> <%= @user.real_name if @user.real_name %></small></h3>
+  <h6>
+    <% @user.user_technologies.each do |t| %>
+      <%= "#{grab_technology_name(t.technology_id)}" %> <span class="badge badge-primary"><%= t.skill_level %></span>
+    <% end %>
+    | <%= link_to fa_icon('plus-circle'), user_technologies_path(@user) %>
+  </h6>
+  <%= link_to 'Edit profile', edit_user_path(@user) %> <%= link_to fa_icon('user-circle'), edit_user_path(@user) %>
+</center>
+<hr>
+<center>
+  <div class="container">
+    <p class="text-left"><strong>Bio: </strong><br>
+      <%= @user.bio if !@user.bio.nil? %></p>
+  </div>
+  <br>
+</center>
+</div>
+</div>
+<div class="container mx-auto">
+  <div class="text-center">
+    <div class="row">
+      <% @user.teams.each do |t| %>
+        <div class="col-lg-3">
+          <div class="card" style="width: 18rem;">
+            <img src="<%= t.avatar_url %>" class="card-img-top" alt="...">
+            <figcaption class="figure-caption text-center">Created by: <%= link_to creator_name(t.creator_id), user_path(t.creator_id) %> (<%= t.updated_at.strftime('%b %d') %>)</figcaption>
+            <div class="card-body">
+              <h5 class="card-title"><%= t.name.titleize %></h5>
+              <p class="card-text"><strong>Description:</strong> <%= t.description %></p>
+              <p class="card-text"><strong>Goals:</strong> <%= t.goals %></p>
+              <p class="card-text"><strong>Slack:</strong> <%= t.communication_method %></p>
+              <a href="<%= team_path(t) %>" class="btn btn-primary">View Group</a>
             </div>
-
-            <div class="container mx-auto">
-<div class="text-center">
-  <div class="row">
-    <% @user.teams.each do |t| %>
-      <div class="col-lg-3">
-        <div class="card" style="width: 18rem;">
-          <img src="<%= t.avatar_url %>" class="card-img-top" alt="...">
-          <figcaption class="figure-caption text-center">Created by: <%= link_to creator_name(t.creator_id), user_path(t.creator_id) %> (<%= t.updated_at.strftime('%b %d') %>)</figcaption>
-          <div class="card-body">
-            <h5 class="card-title"><%= t.name.titleize %></h5>
-            <p class="card-text"><strong>Description:</strong> <%= t.description %></p>
-            <p class="card-text"><strong>Goals:</strong> <%= t.goals %></p>
-            <p class="card-text"><strong>Slack:</strong> <%= t.communication_method %></p>
-            <a href="<%= team_path(t) %>" class="btn btn-primary">View Group</a>
           </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-<img src="<%= @user.avatar_url %>" alt="User Logo" class="img-fluid" style="max-width: 8%; height: auto;">
-<p>Username: <%= @user.username %></p>
-<p>Email: <%= @user.email %></p>
-<p><%= "Name: #{@user.real_name}" if !@user.real_name.nil? %></p>
-<p><%= "Company: #{@user.company}" if !@user.company.nil? %></p>
-<p><%= "Bio: #{@user.bio}" if !@user.bio.nil? %></p>
-<p><%= link_to 'GitHub Profile', @user.github_profile_url if !@user.bio.nil? %></p>
-<h4>Your technologies:</h4>
-<p><%= link_to 'Add a technology to your profile', user_technologies_path(@user) %></p>
-<% @user.user_technologies.each do |t| %>
-  <p>
-    <%= "#{grab_technology_name(t.technology_id)}"%> - <%= "Skill level: #{t.skill_level}" %> <%= link_to 'Delete', user_technology_path(technology_id: t.id), method: :delete %>
-  </p>
-<% end %>
-<h4>Your Teams:</h4>
-<ul>
-  <% @user.teams.each do |t| %>
-    <li><%= link_to t.name, team_path(t) %></li>
-  <% end %>
-</ul>
-<br>
-<br>
-<p><%= link_to 'Edit profile', edit_user_path(@user) %></p>
-<p><%= link_to 'Edit your skillset', user_technologies_path(@user) %></p>
