--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,3 +30,9 @@ $primary: #5f27cd;
 .navbar {
   background-color: #576574;
 }
+
+.field_with_errors {
+  border-style: solid;
+  border-width: 1px;
+  border-color: #5f27cd;
+}
