update TODO and add ability for user to delete a technology from their profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
   <h3 class="media-heading"><%= @user.username %><small> <%= @user.real_name if @user.real_name %></small></h3>
   <h6>
     <% @user.user_technologies.each do |t| %>
-      <%= "#{grab_technology_name(t.technology_id)}" %> <span class="badge badge-primary"><%= t.skill_level %> </span> |
+      <%= "#{grab_technology_name(t.technology_id)}" %> <span class="badge badge-primary"><%= t.skill_level %> </span> <%= link_to fa_icon('trash-o'), user_technology_path(technology_id: t.id), method: :delete %>|
     <% end %>
       <%= link_to fa_icon('plus-circle'), user_technologies_path(@user) %>
   </h6>
