--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,3 +36,10 @@ $primary: #5f27cd;
   border-width: 1px;
   border-color: #5f27cd;
 }
+
+.media img {
+  width: 5%;
+  height: auto;
+  border-style: solid;
+  border-width: 1px;
+}
