--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,8 +38,13 @@ $primary: #5f27cd;
 }
 
 .media img {
-  width: 5%;
+  width: 10%;
   height: auto;
   border-style: solid;
   border-width: 1px;
+}
+
+.badge-creator {
+  color: #fff;
+  background-color: #5f27cd;
 }
