begin fleshing out major feature test for user interaction on the website

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -28,7 +28,7 @@
           <%= link_to 'Profile', user_path(@user), class: 'nav-link' %>
         </li>
         <li class="nav-item active">
-          <%= link_to 'Logout', logout_path, method: 'DELETE', class: 'nav-link' %>
+          <%= link_to 'Logout', logout_path, method: 'DELETE', class: 'nav-link', id: 'logout' %>
         </li>
       </ul>
     <% end %>
