--- a/app/views/team_technologies/new.html.erb
+++ b/app/views/team_technologies/new.html.erb
@@ -5,12 +5,13 @@
 
 <%= form_for(@technology) do |f| %>
   <%= f.label :technology %>
-  <%= f.collection_select :technology, Technology.all, :id, :name, include_blank: 'Select an existing technology' %>
+  <%= f.collection_select :technology_id, Technology.all, :id, :name, include_blank: 'Select an existing technology' %>
   <br>
-  <%= f.fields_for :technologies, Technology.new do |technology_fields| %>
+  <%= f.fields_for :technology, @technology.build_technology do |technology_fields| %>
     <%= f.label :name, 'Add a new technology' %>
     <%= technology_fields.text_field :name %>
   <% end %>
   <br>
+  <%= f.hidden_field :team_id, value: @team.id %>
   <%= f.submit 'Add Technology' %>
 <% end %>
