users can link their GitHub accounts after they have already signed up. Error handling for duplicate GitHub UIDs handled.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,8 @@
 		<%= link_to fa_icon('plus-circle'), user_technologies_path(@user) %>
 	</h6>
 	<%= link_to 'Edit profile', edit_user_path(@user) %> <%= link_to fa_icon('user-circle'), edit_user_path(@user) %>
+	<br>
+	<%= link_to('Link your Github account!', '/auth/github') %>
 </center>
 <hr>
 <center>
