--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for(comment, url: team_comments_path) do |f| %>
+<%= form_for(comment, url: team_comments_path(team)) do |f| %>
   <%= f.text_area :content %>
   <br>
-  <%= f.submit %>
+  <%= f.submit(data: { disable_with: false }) %>
 <% end %>
