--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_include_tag 'application' %>
     <% if params[:controller] == 'teams' %>
       <%= javascript_include_tag params[:controller] %>
+      <%= javascript_include_tag 'comments' %>
     <% end %>
   </head>
 
