--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -22,7 +22,9 @@
 	<% end %>
 	<br>
 	<h4>Comments:</h4>
-	<p><%= link_to 'Add a comment', new_team_comment_path(@team) %></p>
+	<%= render partial: "comments/form", locals: { user: @user, comment: @comment, team: @team } %>
+	<br>
+	<div id="comments">
 	<% @comments.each do |c| %>
 		<div class="media">
 			<figure>
@@ -38,6 +40,6 @@
 				</div>
 			</figure>
 		</div>
-		<hr>
 	<% end %>
+	</div>
 </div>
