--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-    <% if params[:controller] == 'teams' %>
+    <% if params[:controller] == 'teams' && params[:action] == 'index' %>
       <%= javascript_include_tag params[:controller] %>
-      <%= javascript_include_tag 'comments' %>
       <%= javascript_include_tag 'team' %>
+    <% elsif params[:controller] == 'users' && params[:action] == 'index' %>
+      <%= javascript_include_tag params[:controller] %>
+    <% elsif params[:controller] == 'teams' && params[:action] == 'show' %>
+      <%= javascript_include_tag 'comments' %>
     <% end %>
   </head>
 
