--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,3 +65,12 @@ $primary: #5f27cd;
   width: 100%;
   height: 100%;
 }
+
+.users-admin-list {
+  width: 10%;
+  height: auto;
+}
+
+#users-link {
+  color: #e74c3c;
+}
