--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,6 +19,11 @@
 				<li class="nav-item active">
 					<%= link_to 'Profile', user_path(@user), class: 'nav-link' %>
 				</li>
+				<% if @user.admin? %>
+				<li class="nav-item active">
+					<%= link_to 'Users', users_path, class: 'nav-link', id: 'users-link' %>
+				</li>
+				<% end %>
 				<li class="nav-item active">
 					<%= link_to 'Logout', logout_path, method: 'DELETE', class: 'nav-link', id: 'logout' %>
 				</li>
