admin users can remove and edit other users' profiles

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,9 @@
 	</h6>
 	<%= link_to 'Edit profile', edit_user_path(@user) %> <%= link_to fa_icon('user-circle'), edit_user_path(@user) %>
 	<br>
-	<%= link_to('Link your Github account!', '/auth/github') %>
+	<% if @user.github_uid.nil? %>
+		<%= link_to('Link your Github account!', '/auth/github') %>
+	<% end %>
 </center>
 <hr>
 <center>
