--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: "layouts/nav", locals: { user: @user } %>
 <%= render partial: "layouts/flash_message" %>
 <%= render partial: "layouts/object_errors", locals: { object: @user } %>
-<%= form_for(@user) do |f| %>
+<%= form_for(@account) do |f| %>
 	<div class="container">
 		<div class="form-group">
 			<%= f.label :username %>
@@ -29,6 +29,7 @@
 			<%= f.text_field :avatar_url, class: "form-control" %>
 			<br>
 			<%= f.submit 'Update Profile', class: 'btn btn-primary' %>
+			<%= button_to "Delete Account", user_path(@account.id), :method => :delete, :class => "btn btn-danger" %>
 		</div>
 	</div>
 <% end %>
