admin can delete users directly from user show page

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,7 @@
       <th scope="col">Profile</th>
       <th scope="col">Account Type</th>
       <th scope="col">Avatar</th>
+      <th scope="col">Actions</th>
     </tr>
   </thead>
   <tbody id="user_table">
