user show page is rendered via JS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
       <%= javascript_include_tag params[:controller] %>
     <% elsif params[:controller] == 'teams' && params[:action] == 'show' %>
       <%= javascript_include_tag 'comments' %>
+    <% elsif params[:controller] == 'users' && params[:action] == 'show' %>
+      <%= javascript_include_tag 'user' %>
     <% end %>
   </head>
 
