redesigned user profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "layouts/nav", locals: { user: @user } %>
 <%= render partial: "layouts/flash_message" %>
 <%= render partial: "layouts/object_errors", locals: { object: @user } %>
-<div id="show-user" class="text-center">
+<div id="show-user" class="user-page">
 </div>
