--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -310,4 +310,26 @@ $primary: #5f27cd;
     width: 40px;
     padding: 10px 0px 9px;
   }
+
+  .user-page {
+    text-align: center;
+  }
+
+  .user-page div {
+    border: 1px rgb(114, 114, 114) solid;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto 10px auto;
+    box-shadow: 0px 0px 5px rgb(51, 51, 51);
+    box-shadow: 0px 0px 5px rgba(51, 51, 51, 0.7);
+  }
+
+  .user-profile-image {
+    width: 20%;
+    height: auto;
+  }
 }
