--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div class="container">
-		<div class="row">
+		<div class="row justify-content-center">
 			<div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
 				<ul class="event-list">
         <% @teams.each do |t| %>
